--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.1.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.unisul.web</groupId>
-	<artifactId>pweb</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>pweb</name>
-	<description>Aula de programação para web</description>
+	<groupId>br.unisul.web.sexta</groupId>
+	<artifactId>prog_web_sexta</artifactId>
+	<version>1.0.0</version>
+	<name>prog_web_sexta</name>
+	<description>Exemplos da disciplina de prog para web</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -29,6 +29,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
